<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ResultActivity">

        <TextView
            android:id="@+id/result_points"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/result_points" />

        <TextView
            android:id="@+id/result_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="TypesOfDepression" />

        <TextView
            android:id="@+id/result_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="DESCRIPTION" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_statistics"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="@string/text_statistics"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/delete_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_baseline_delete_24"
                android:contentDescription="@string/delete_statistics" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_date_result"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/result_date"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_points_result"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/result_points_statistics"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_result"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/result_statistics"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_results"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>


</ScrollView>